# notifyhealth

./: .editorconfig  Cargo.toml  Dockerfile  Dockerfile.windows  README.md  justfile
.github/workflows/: build.yml
src/: args.rs  containers.rs  macros.rs  main.rs  print.rs  webhook.rs
src/lib/: args.rs  containers.rs  exec.rs  macros.rs  mod.rs  msteams.rs  print.rs  webhook.rs
tests/: webhook_test.rs
