[package]
name = "notifyhealth"
version = "0.1.0"
edition = "2021"
authors = ["Giovanni Bassi <giggio@giggio.net>"]

[profile.release]
strip = true
lto = true

[dependencies]
async-trait = "0.1"
bollard = "0.11"
clap = { version = "3.1", features = ["derive"] }
clap-verbosity-flag = "1.0"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
isahc = { version = "1.6", features = ["json"] }
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
mockall_double = "0.2.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }

[dev-dependencies]
mockall = "0.11"
pretty_assertions = "1.1"
