[package]
name = "notifyhealth"
version = "0.1.1"
edition = "2021"
authors = ["Giovanni Bassi <giggio@giggio.net>"]

[lib]
name = "notifyhealth"
path = "src/lib/mod.rs"
doctest = false
test = false

[[bin]]
name = "notifyhealth"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dependencies]
async-trait = "0.1"
bollard = "0.14.0"
clap = { version = "3.2.23", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
env_logger = "0.10.0"
futures = "0.3"
futures-util = "0.3"
isahc = { version = "1.6", features = ["json"] }
itertools = "0.10"
log = "0.4"
mhteams = "0.1.0"
openssl = { version = "0.10", features = ["vendored"], optional = true }
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }

[dev-dependencies]
mockall = "0.11"
mockito = "1.0.2"
pretty_assertions = "1.1"
